YTI-461: Renaming Controlled Vocabularies as Terminologies. Localization file cleanup.

--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -202,7 +202,7 @@
 <div translate>Technical namespaces</div>
 <div translate>None added</div>
 <div translate>Vocabularies</div>
-<div translate>Controlled vocabularies</div>
+<div translate>Terminologies</div>
 <div translate>Add vocabulary</div>
 <div translate>Identifier</div>
 <div translate>Vocabulary name</div>
