--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -74,9 +74,9 @@
         <a id="navigation_interoperability_platform_link"
            class="dropdown-item"
            ng-href="https://yhteentoimiva.suomi.fi/" target="_blank">yhteentoimiva.suomi.fi</a>
-        <a id="navigation_controlled_vocabularies_link"
+        <a id="navigation_terminologies_link"
            class="dropdown-item"
-           ng-href="{{$ctrl.terminologyUrl}}" target="_blank" translate>Suomi.fi Controlled Vocabularies</a>
+           ng-href="{{$ctrl.terminologyUrl}}" target="_blank" translate>Suomi.fi Terminologies</a>
         <a id="navigation_reference_data_link"
            class="dropdown-item"
            ng-href="{{$ctrl.codeListUrl}}" target="_blank" translate>Suomi.fi Reference Data</a>
