--- a/src/app/components/model/modelPage.html
+++ b/src/app/components/model/modelPage.html
@@ -1,96 +1,85 @@
-<div ng-if="$ctrl.loading">
-  <ajax-loading-indicator></ajax-loading-indicator>
-</div>
+<div class="row">
+  <div class="col-12">
+    <div class="panel-left">
+      <div class="selection-box" float always="true">
+        <uib-tabset active="$ctrl.activeTab" justified="true">
+          <uib-tab ng-repeat="tab in $ctrl.tabs">
+            <uib-tab-heading id="{{tab.type + '_tab_heading_link'}}">
+              <p>{{tab.type | translate}}</p>
+            </uib-tab-heading>
 
-<div class="content-box main" ng-if="!$ctrl.loading">
+            <div ng-if="$index === $ctrl.activeTab">
 
-  <div class="row top">
-    <div class="col-12">
-      <model-view id="'model'" model="$ctrl.model" model-controller="$ctrl"></model-view>
-    </div>
-  </div>
-
-  <div class="row bottom">
-    <div class="col-12">
-      <div class="panel-left">
-        <div class="selection-box" float always="true">
-          <uib-tabset active="$ctrl.activeTab" justified="true">
-            <uib-tab ng-repeat="tab in $ctrl.tabs">
-              <uib-tab-heading id="{{tab.type + '_tab_heading_link'}}">
-                <p>{{tab.type | translate}}</p>
-              </uib-tab-heading>
-
-              <div ng-if="$index === $ctrl.activeTab">
-
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="selectable-actions">
-                      <button id="{{'add_new_' + tab.type + '_button'}}" ng-if="$ctrl.canEdit()" type="button" class="btn btn-action btn-md add-new-button" ng-click="tab.addNew()">
-                        <span>{{tab.addLabel | translate}}</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="selectable-items">
-                      <ul ng-class="{'has-button': $ctrl.canEdit()}">
-                        <li ng-repeat="item in tab.items() track by item.id.uri"
-                            id="{{item.id.uri + '_tabset_link'}}"
-                            ng-class="{'selection': $ctrl.isSelected(item)}"
-                            ng-click="$ctrl.select(item)">
-                          {{item.label}} <ajax-loading-indicator-small ng-if="$ctrl.isLoading(item)"></ajax-loading-indicator-small>
-                        </li>
-                      </ul>
-                    </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="selectable-actions">
+                    <button id="{{'add_new_' + tab.type + '_button'}}" ng-if="$ctrl.canEdit()" type="button" class="btn btn-action btn-md add-new-button" ng-click="tab.addNew()">
+                      <span>{{tab.addLabel | translate}}</span>
+                    </button>
                   </div>
                 </div>
               </div>
-            </uib-tab>
-          </uib-tabset>
+
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="selectable-items">
+                    <ul ng-class="{'has-button': $ctrl.canEdit()}">
+                      <li ng-repeat="item in tab.items() track by item.id.uri"
+                          id="{{item.id.uri + '_tabset_link'}}"
+                          ng-class="{'selection': $ctrl.isSelected(item)}"
+                          ng-click="$ctrl.selectResource(item)">
+                        {{item.label}} <ajax-loading-indicator-small ng-if="$ctrl.isLoading(item)"></ajax-loading-indicator-small>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </uib-tab>
+        </uib-tabset>
+      </div>
+    </div>
+
+    <div class="panel-right">
+
+      <div class="selection-container"
+           ng-style="{ width: $ctrl.selectionWidth }">
+
+        <class-view id="class"
+                    ng-if="$ctrl.resource.isClass()"
+                    parent="$ctrl.parent"
+                    data-class="$ctrl.resource"
+                    open-property-id="$ctrl.propertyId"
+                    model="$ctrl.model"
+                    model-controller="$ctrl">
+        </class-view>
+
+        <predicate-view id="predicate"
+                        ng-if="$ctrl.resource.isPredicate()"
+                        parent="$ctrl.parent"
+                        predicate="$ctrl.resource"
+                        model="$ctrl.model"
+                        model-controller="$ctrl">
+        </predicate-view>
+      </div>
+
+      <div class="visualization-container"
+           ng-style="{ width: $ctrl.visualizationWidth }">
+
+        <div float width="auto">
+
+          <divider ng-if="$ctrl.resource" selection-width="$ctrl.selectionWidth"></divider>
+
+          <visualization-view ng-if="$ctrl.model"
+                              ng-class="{'without-divider': !$ctrl.resource, maximized: $ctrl.visualizationMaximized}"
+                              selection="$ctrl.resource"
+                              model="$ctrl.model"
+                              model-page-actions="$ctrl"
+                              maximized="$ctrl.visualizationMaximized">
+          </visualization-view>
         </div>
       </div>
 
-      <div class="panel-right">
-
-        <div class="selection-container"
-             ng-style="{ width: $ctrl.selectionWidth }">
-
-          <class-view id="class"
-                      ng-if="$ctrl.selection.isClass()"
-                      data-class="$ctrl.selection"
-                      open-property-id="$ctrl.openPropertyId"
-                      model="$ctrl.model"
-                      model-controller="$ctrl">
-          </class-view>
-
-          <predicate-view id="predicate"
-                          ng-if="$ctrl.selection.isPredicate()"
-                          predicate="$ctrl.selection"
-                          model="$ctrl.model"
-                          model-controller="$ctrl">
-          </predicate-view>
-        </div>
-
-        <div class="visualization-container"
-             ng-style="{ width: $ctrl.visualizationWidth }">
-
-          <div float width="auto">
-
-            <divider ng-if="$ctrl.selection" selection-width="$ctrl.selectionWidth"></divider>
-
-            <visualization-view ng-if="$ctrl.model"
-                                ng-class="{'without-divider': !$ctrl.selection, maximized: $ctrl.visualizationMaximized}"
-                                selection="$ctrl.selection"
-                                model="$ctrl.model"
-                                model-page-actions="$ctrl"
-                                maximized="$ctrl.visualizationMaximized">
-            </visualization-view>
-          </div>
-        </div>
-
-      </div>
     </div>
   </div>
 </div>
