--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -348,7 +348,6 @@ model-page {
       border: 1px solid $gray;
 
       &.floating {
-        border-bottom: none;
       }
 
       ul.nav-tabs {
@@ -439,7 +438,7 @@ model-page {
       divider {
         display: inline-block;
         float: left;
-        height: calc(100vh - 5px);
+        height: 100vh;
         width: $divider-width;
 
         -webkit-user-select: none;
@@ -463,7 +462,7 @@ model-page {
         float: left;
         display: inline-block;
         width: calc(100% - 10px);
-        height: calc(100vh - 5px);
+        height: 100vh;
         border: 1px solid $gray;
 
         &.without-divider {
@@ -476,6 +475,7 @@ model-page {
           left: 0;
           width: 100%;
           height: 100%;
+          z-index: 2;
         }
 
         class-visualization {
