Revert "YTI-305: Add tabbing to data model page."
This reverts commit 98a594a347c875f9ba3a8045fb04445b3db4512b.

--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -44,7 +44,7 @@
     <imported-namespaces-view value="$ctrl.model"
                               context="$ctrl.model"
                               allow-profiles="$ctrl.allowProfiles"
-                              namespaces-in-use="$ctrl.namespacesInUse"></imported-namespaces-view>
+                              namespaces-in-use="$ctrl.namespacesInUse()"></imported-namespaces-view>
     <links-view value="$ctrl.model" context="$ctrl.model"></links-view>
   </div>
 
