YTI-481: Remove flag icon and favicon.

--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -3,7 +3,7 @@
   <div class="navbar-header">
     <div class="navbar-fluid">
       <a id="main_page_link" class="navbar-brand" ng-href="/">
-        <img class="logo" ng-src="{{$ctrl.logo}}"/>
+        <!--<img class="logo" ng-src="{{$ctrl.logo}}"/>-->
         <span translate>Data Vocabularies</span>
         <span ng-if="$ctrl.environmentIdentifier">{{$ctrl.environmentIdentifier}}</span>
       </a>
