YTI-302: Localize also page title + put environment identifier for non-prod environments.

--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -5,7 +5,7 @@
       <a id="main_page_link" class="navbar-brand" ng-href="/">
         <!--<img class="logo" ng-src="{{$ctrl.logo}}"/>-->
         <span translate>Data Vocabularies</span>
-        <span ng-if="$ctrl.environmentIdentifier">{{$ctrl.environmentIdentifier}}</span>
+        <span>{{$ctrl.environmentIdentifier}}</span>
       </a>
     </div>
   </div>
