YTI-500: Some more refactoring, using service to handle provider availability.

--- a/src/app/components/application.html
+++ b/src/app/components/application.html
@@ -1,5 +1,5 @@
 <ng-container ng-show="$ctrl.applicationInitialized">
-  <navigation-bar help-provider="$ctrl.helpProvider"></navigation-bar>
+  <navigation-bar></navigation-bar>
   <div class="container-fluid" ng-class="{ 'without-footer': !$ctrl.showFooter }">
     <breadcrumb></breadcrumb>
     <div ng-view></div>
