YTI-537: Added id predicate_change_type to attribute-association type change button.

--- a/src/app/components/editor/predicateForm.html
+++ b/src/app/components/editor/predicateForm.html
@@ -3,6 +3,7 @@
     <h4 class="pull-left">{{$ctrl.predicate.normalizedType + ' information' | capitalize | translate}}</h4>
 
     <button ng-if="$ctrl.isEditing() && !$ctrl.predicate.unsaved"
+            id="predicate_change_type"
             type="button"
             class="btn btn-link pull-right"
             style="margin-left: 5px"
