Remove name clash between (browser) select event and resource/property selection. Used to cause very strange behaviour on text input selections.

--- a/src/app/components/model/modelMain.html
+++ b/src/app/components/model/modelMain.html
@@ -40,7 +40,7 @@
       <ngb-tab id="dataTab" [title]="'Datamodel definition' | translate">
         <ng-template ngbTabContent>
           <model-page [parent]="editorContainer" [currentSelection]="currentModelAndSelection"
-                      (select)="onSubSelection($event)" (updateNamespaces)="onNamespacesChange($event)"></model-page>
+                      (makeSelection)="onSubSelection($event)" (updateNamespaces)="onNamespacesChange($event)"></model-page>
         </ng-template>
       </ngb-tab>
       <ngb-tab id="modelDetailsTab" [title]="'Datamodel details' | translate">
