--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -24,6 +24,8 @@
 <div translate>Suggestion</div>
 <div translate>Show</div>
 <div translate>Hide</div>
+<div translate>Show model details</div>
+<div translate>Hide model details</div>
 <div translate>Front page</div>
 <div translate>New library creation</div>
 <div translate>New profile creation</div>
