--- a/src/app/translations/titles.html
+++ b/src/app/translations/titles.html
@@ -13,6 +13,8 @@
 <div translate>Concept id</div><div translate>Concept id info</div>
 <div translate>Vocabulary id</div><div translate>Vocabulary id info</div>
 <div translate>Reference data URI</div><div translate>Reference data URI info</div>
+<div translate>Max properties</div><div translate>Max properties info</div>
+<div translate>Min properties</div><div translate>Min properties info</div>
 
 <div translate>Library label</div><div translate>Library label info</div>
 <div translate>Profile label</div><div translate>Profile label info</div>
@@ -71,6 +73,8 @@
 <div translate>Max length</div><div translate>Max length info</div>
 <div translate>XML Wrapper</div><div translate>XML Wrapper info</div>
 <div translate>XML Attribute</div><div translate>XML Attribute info</div>
+<div translate>Deactivated</div><div translate>Deactivated info</div>
+<div translate>Unique label</div><div translate>Unique label info</div>
 
 <div translate>Homepage</div><div translate>Homepage info</div>
 <div translate>Model languages</div><div translate>Model languages info</div>
