YTI-567: Prevent label-clicking from changing boolean values on view mode forms.

--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -34,7 +34,7 @@
     </editable>
 
     <editable data-title="Deactivated" context="$ctrl.model">
-        <input id="{{$ctrl.class.deactivated}}" type="checkbox" ng-model="$ctrl.class.deactivated"/>
+        <input id="deactivated" type="checkbox" ng-model="$ctrl.class.deactivated"/>
     </editable>
 
   </div>
