--- a/src/app/components/editor/classView.html
+++ b/src/app/components/editor/classView.html
@@ -3,7 +3,7 @@
     <div ng-if="$ctrl.class && $ctrl.model">
       <selection-view id-prefix="'class_'" model="$ctrl.model" editable-controller="$ctrl">
         <selection-buttons>
-          <export ng-hide="$ctrl.isEditing()" entity="$ctrl.class" context="$ctrl.model"></export>
+          <export ng-hide="$ctrl.isEditing()" idPrefix="class" entity="$ctrl.class" context="$ctrl.model"></export>
           <history button-id="'class_edit_buttons_history'" model="$ctrl.model" resource="$ctrl.class"
                    ng-hide="$ctrl.isEditing()"></history>
           <app-status [status]="$ctrl.class.status"></app-status>
