--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -29,7 +29,7 @@
       </editable-range-select>
 
       <editable data-title="Unique label" context="$ctrl.model" ng-if="$ctrl.property.dataType === 'rdf:langString'">
-        <input id="{{$ctrl.property.uniqueLang + 'permanentIdentifier'}}" type="checkbox" ng-model="$ctrl.property.uniqueLang" />
+        <input id="{{$ctrl.property.internalId + 'permanentIdentifier'}}" type="checkbox" ng-model="$ctrl.property.uniqueLang" />
       </editable>
 
       <editable-multiple-language-select ng-if="$ctrl.model.isOfType('profile') && $ctrl.property.dataType === 'rdf:langString'"
