Added property pairs inputs using existing editables

--- a/src/app/translations/titles.html
+++ b/src/app/translations/titles.html
@@ -75,6 +75,10 @@
 <div translate>XML Attribute</div><div translate>XML Attribute info</div>
 <div translate>Deactivated</div><div translate>Deactivated info</div>
 <div translate>Unique label</div><div translate>Unique label info</div>
+<div translate>Equals</div><div translate>Equals info</div>
+<div translate>Disjoint</div><div translate>Disjoint info</div>
+<div translate>Less than</div><div translate>Less than info</div>
+<div translate>Less than or equals</div><div translate>Less than or equals info</div>
 
 <div translate>Homepage</div><div translate>Homepage info</div>
 <div translate>Model languages</div><div translate>Model languages info</div>
