--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -144,6 +144,7 @@
 <div translate>application/rdf+xml</div>
 <div translate>application/ld+json+context</div>
 <div translate>application/schema+json</div>
+<div translate>application/vnd.oai.openapi+json</div>
 <div translate>framed ld+json</div>
 <div translate>ld+json frame</div>
 <div translate>date format</div>
