YTI-430: Add use context filter to front page.

--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -75,6 +75,10 @@
                                   [options]="$ctrl.modelTypes"
                                   [filter-subject]="$ctrl.modelType$"></app-filter-dropdown>
 
+              <app-filter-dropdown id="use_context_filter_dropdown"
+                                   [options]="$ctrl.useContexts"
+                                   [filter-subject]="$ctrl.useContext$"></app-filter-dropdown>
+
               <app-filter-dropdown id="model_status_filter_dropdown"
                                   [options]="$ctrl.statuses"
                                   [filter-subject]="$ctrl.status$"></app-filter-dropdown>
