YTI-430: Add use context filter to front page.

--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -40,7 +40,6 @@
 <div translate>attribute</div>
 <div translate>association</div>
 <div translate>property</div>
-<div translate>All types</div>
 <div translate>fi</div>
 <div translate>en</div>
 <div translate>data language</div>
@@ -277,11 +276,9 @@
 <div translate>No</div>
 <div translate>Show classes defined in profiles</div>
 <div translate>Match to content</div>
-<div translate>All types</div>
 <div translate>Unique label</div>
 <div translate>All organizations</div>
 <div translate>Status</div>
-<div translate>All models</div>
 <div translate>Choose organization</div>
 <div translate>ADMIN</div>
 <div translate>DATA_MODEL_EDITOR</div>
@@ -299,3 +296,5 @@
 <div translate>Delete attribute</div>
 <div translate>Delete association</div>
 <div translate>Search</div>
+<div translate>All model types</div>
+<div translate>All use contexts</div>
