YTI-555: Prevent adding conflicting (forbidden or already used, e.g., by the model) prefixes.

--- a/src/app/components/model/addEditNamespaceModal.html
+++ b/src/app/components/model/addEditNamespaceModal.html
@@ -36,6 +36,7 @@
                class="form-control"
                required
                prefix-input
+               reserved-prefixes="$ctrl.reservedPrefixes"
                active-namespace="$ctrl.namespaceToEdit"
                allow-technical="!$ctrl.edit"
                model="$ctrl.model"
