--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -44,7 +44,8 @@
     <imported-namespaces-view value="$ctrl.model"
                               context="$ctrl.model"
                               allow-profiles="$ctrl.allowProfiles"
-                              namespaces-in-use="$ctrl.namespacesInUse"></imported-namespaces-view>
+                              namespaces-in-use="$ctrl.namespacesInUse"
+                              model-prefix="$ctrl.model.prefix"></imported-namespaces-view>
     <links-view value="$ctrl.model" context="$ctrl.model"></links-view>
   </div>
 
