Add localizations for API path

--- a/src/app/translations/titles.html
+++ b/src/app/translations/titles.html
@@ -88,3 +88,4 @@
 <div translate>Creator</div><div translate>Creator info</div>
 <div translate>Localname</div><div translate>Localname info</div>
 <div translate>Read-only</div><div translate>Read-only info</div>
+<div translate>API path</div><div translate>API path info</div>
