--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -308,3 +308,5 @@
 <div translate>standard</div>
 <div translate>All model types</div>
 <div translate>All use contexts</div>
+<div translate>Name</div>
+<div translate>Model</div>
