--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -203,9 +203,11 @@
                       </button>
                   
                       <div uib-dropdown-menu class="dropdown-menu-right" aria-labelledby="{{'class_' + searchResult.id + '_actions_button'}}">
+                        <ajax-loading-indicator-small ng-if="!$ctrl.selection"></ajax-loading-indicator-small>
                         <button id="{{'show_class_info_' + searchResult.id + '_button'}}"
                                 class="dropdown-item"
                                 ng-click="$ctrl.showClassInfo()"
+                                ng-if="$ctrl.selection"
                                 translate>
                           Show class information
                         </button>
