YTI-353 Refactor class info modal

--- a/src/app/components/editor/showClassInfoModal.html
+++ b/src/app/components/editor/showClassInfoModal.html
@@ -5,6 +5,6 @@
     </h4>    
   </div>
   <div class="modal-body full-height">
-    <class-form id="class_info_form" ng-if="!$ctrl.isSelectionExternalEntity && $ctrl.selection" class="$ctrl.selection" old-class="$ctrl.selection" model="$ctrl.model" open-property-id="openPropertyId"></class-form>
+    <class-form id="class_info_form" ng-if="$ctrl.selection" class="$ctrl.selection" old-class="$ctrl.selection" model="$ctrl.model" open-property-id="openPropertyId"></class-form>
   </div>
 </form>
